fixed styling on mobile

--- a/style-google.css
+++ b/style-google.css
@@ -1,3 +1,15 @@
+.attribution {
+  background-color: #ffcd1f;
+  color: #455358;
+  padding: 4px 8px;
+  position: absolute;
+  left: 8px;
+  top: 8px;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 1;
+  border-radius: 4px;
+}
 body {
   color: #455358;
   font-family: hurme_no2-webfont, -apple-system, BlinkMacSystemFont, sans-serif;
@@ -16,7 +28,7 @@ a {
 }
 
 /* Native Ad Styling */
-.main-container {
+.adunit {
   width: 100%;
   max-width: 814px;
   margin: auto;
@@ -85,18 +97,6 @@ a {
   width: 20px;
   height: auto;
   margin-left: 8px;
-}
-.flag {
-  background-color: #ffcd1f;
-  color: #455358;
-  padding: 4px 8px;
-  position: absolute;
-  top: 1.25rem;
-  right: 0;
-  font-size: 12px;
-  font-weight: 700;
-  letter-spacing: 1;
-  border-radius: 4px;
 }
 
 /* 16:9 Image */
@@ -208,6 +208,12 @@ a {
 }
 
 /* Menu */
+body {
+  max-width: 750px;
+  margin: auto;
+  height: auto;
+  position: relative;
+}
 .nav ul {
   width: 100%;
   display: flex;
@@ -225,4 +231,111 @@ a {
 .nav li:hover {
   background-color: #ffcd1f;
   color: #455358;
+}
+
+body {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+}
+/* GOOGLE */
+
+/* .attribution {
+  background-color: #fff;
+  border-radius: 2px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+  font-size: 13px;
+  left: 4px;
+  padding-left: 3px;
+  padding-right: 3px;
+  position: absolute;
+  top: 4px;
+} */
+
+.title {
+  display: table-cell;
+  height: 30px;
+  padding-bottom: 8px;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 8px;
+  vertical-align: middle;
+}
+
+.title a {
+  color: #212121;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.2;
+  text-decoration: none;
+}
+
+.body {
+  display: table;
+}
+
+.image {
+  display: flex;
+  float: left;
+  height: 114px;
+  width: 114px;
+}
+
+.image img {
+  height: 100%;
+  width: 100%;
+}
+
+.image .image-link {
+  height: 100%;
+  width: 100%;
+}
+
+.call-to-action {
+  border-top: 1px solid #ddd;
+  display: table;
+  padding-right: 6px;
+  padding-top: 6px;
+  text-align: center;
+  width: calc(100% - 120px);
+}
+
+.call-to-action a {
+  color: #4285f4;
+  font-size: 14px;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.logo {
+  float: left;
+  padding-bottom: 8px;
+  padding-left: 8px;
+  width: 22px;
+}
+
+.logo img {
+  height: 100%;
+  width: 100%;
+}
+
+.logo .logo-link {
+  height: 100%;
+  width: 100%;
+}
+
+.advertiser {
+  float: left;
+  padding-bottom: 8px;
+  padding-left: 7px;
+  padding-right: 8px;
+  padding-top: 4px;
+}
+
+.advertiser a {
+  color: #777;
+  font-size: 12px;
+  font-weight: 400;
+  text-decoration: none;
 }
